--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "Binary.com",
   "license": "Apache License 2.0",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "^0.4.*",
     "grunt-shell": "^1.1.1",
-    "nightwatch": "^0.5.27",
-    "time-grunt": "^1.0.0"
+    "nightwatch": "^0.5.*",
+    "selenium-standalone": "^2.*",
+    "time-grunt": "^1.*"
   }
 }
