Update nightwatch runner config, fix a test

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nightwatch_integration_tests",
   "scripts": {
-    "test": "grunt test"
+    "test": "nightwatch"
   },
   "repository": {
     "type": "git",
