--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: node_js
+
 node_js:
   - "0.10"
 
 before_script:
   - npm install
 
+# Do not email build status
 notifications:
   email: false
+
+# Do not build master branch
+branches:
+  except:
+    - master
