--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "Apache License 2.0",
   "devDependencies": {
     "grunt": "^0.4.*",
+    "grunt-junit-report": "0.0.4",
     "grunt-shell": "^1.1.1",
     "nightwatch": "^0.5.*",
     "selenium-standalone": "^2.*",
