--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Binary.com",
   "license": "Apache License 2.0",
   "devDependencies": {
-    "grunt": "^0.4.*",
+    "grunt": "^0.4.5",
     "grunt-junit-report": "0.0.4",
     "grunt-shell": "^1.1.1",
     "nightwatch": "^0.5.*",
